# fcitx5-kkc

./: CMakeLists.txt  Messages.sh  README.md  config.h.in  org.fcitx.Fcitx5.Addon.Kkc.metainfo.xml.in  org.fcitx.fcitx5-kkc.metainfo.xml.in
.github/workflows/: check.yml
cmake/: FindLibKKC.cmake
data/: CMakeLists.txt
gui/: CMakeLists.txt  adddictdialog.cpp  adddictdialog.h  adddictdialog.ui  addshortcutdialog.cpp  addshortcutdialog.h  addshortcutdialog.ui  common.h  dictmodel.cpp  dictmodel.h  dictwidget.cpp  dictwidget.h  dictwidget.ui  kkc-config.json  main.cpp  main.h  rulemodel.cpp  rulemodel.h  shortcutmodel.cpp  shortcutmodel.h  shortcutwidget.cpp  shortcutwidget.h  shortcutwidget.ui
po/: CMakeLists.txt  ca.po  da.po  de.po  fcitx5-kkc.pot  fr.po  he.po  ja.po  ka.po  ko.po  ru.po  tr.po  vi.po  zh_CN.po  zh_TW.po
src/: CMakeLists.txt  kkc-addon.conf.in  kkc-addon.conf.in.in  kkc-internal.h  kkc.conf.in  kkc.cpp  kkc.h
